fixing css for footer and sections on small devices

--- a/wishify/src/components/Footer.module.css
+++ b/wishify/src/components/Footer.module.css
@@ -5,6 +5,9 @@
   font-size: 14px;
   color: #57606a;
   width: 100%;
+  position: absolute;
+  bottom: 0;
+  transform: translateY(304px);
 }
 
 .inner {
